# oop-laba2

./: CMakeLists.txt  README.md
headers/: fork.h  philosopher.h
src/: fork.cpp  main.cpp  philosopher.cpp
